--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -3,7 +3,9 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    link(rel="stylesheet", href="/static/dist/css/app.min.css")
     title Document
   body
-    block main
-      this is default content
+    .container
+      block main
+        this is default content
