Sass flexbox grid added to project

--- a/src/views/createTodo.pug
+++ b/src/views/createTodo.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block main
-  .row
-    .col-12-sm.col-6.center
+  .row.center-xs
+    .col-xs-12.col-sm-8.col-md-4
       form(action="/create-todo" method="post" class="form")
         input(type="text" name="title" )
         textarea(name="body" cols="30" rows="10")
